# CML1

./: CMakeLists.txt
branches/boost-numeric-conversion/: CMLConfig.cmake.in  UseCML.cmake.in
branches/boost-numeric-conversion/CMake/: NSIS.template.in
branches/boost-numeric-conversion/cml/et/: scalar_promotions.h
branches/boost-numeric-conversion/tests/: CMakeLists.txt
branches/cml1_class_reorg/: CMakeLists.txt
branches/cml1_class_reorg/cml/mathlib/: typedef.h
branches/cml1_class_reorg/cml/quaternion/: quaternion_promotions.h
branches/cml1_class_reorg/cml/vector/: fixed.h
branches/cml1_class_reorg/examples/: simple.cpp
branches/cml2/cml/vector/: external.h  fixed.h
branches/cml2/tests/: CMakeLists.txt
branches/cmlv2-sandbox/examples/: simple.cpp
branches/oriented_version/tests/timing/: fixed_mat_et1.cpp
cml/: CMakeLists.txt  cml.h  constants.h  dynamic.h  fixed.h  matrix.h  quaternion.h  util.h
cml/core/: dynamic_1D.h  external_1D.h  fixed_1D.h
cml/core/meta/: common.h
cml/et/: size_checking.h
cml/mathlib/: checking.h  coord_conversion.h  epsilon.h  frustum.h  mathlib.h  matrix_concat.h  matrix_misc.h  matrix_ortho.h  matrix_rotation.h  matrix_transform.h  matrix_translation.h  misc.h  quaternion_basis.h  vector_angle.h  vector_misc.h  vector_transform.h
cml/matrix/: determinant.h  external.h  inverse.h  lu.h  matop_macros.h  matrix_expr.h  matrix_functions.h  matrix_mul.h  matrix_print.h  matrix_traits.h  matrix_transpose.h  matrix_unroller.h
cml/quaternion/: conjugate.h  quaternion.h  quaternion_mul.h  quaternion_ops.h  quaternion_print.h  quaternion_traits.h  quatop_macros.h
cml/vector/: dynamic.h  external.h  fixed.h  vecop_macros.h  vector_ops.h  vector_products.h
sandbox/cml1-class-refactoring/cml/core/: fixed_1D.h
sandbox/cml1-class-refactoring/cml/et/: size_checking.h
sandbox/cml1-class-refactoring/cml/matrix/: matrix_rowcol.h  matrix_traits.h
sandbox/cml1-class-refactoring/cml/vector/: external.h  fixed.h  vector_base.h  vector_expr.h  vector_subvector.h  vector_traits.h
sandbox/cml1-class-refactoring/examples/: simple.cpp
sandbox/cml1-class-refactoring/tests/: single_vector_tests.ixx
sandbox/cml2_functionality_tests/crtp/: .exrc  CMakeLists.txt  crtp.cpp  crtp_vector.cpp  crtp_vector.h  crtp_vecxpr.cpp
tests/: CMakeLists.txt
tests/et/: CMakeLists.txt  promotion1.cpp
tests/timing/: vector_algebra1.cpp
trunk/cml/: defaults.h  external.h  vector.h
trunk/cml/core/: cml_assert.h  cml_meta.h  common.h  dynamic_2D.h  external_2D.h  fixed_2D.h  fwd.h
trunk/cml/core/meta/: if.h  switch.h
trunk/cml/et/: array_promotions.h  scalar_ops.h  scalar_promotions.h  tags.h  traits.h
trunk/cml/mathlib/: helper.h  interpolation.h  matrix_basis.h  matrix_projection.h  picking.h  projection.h  quaternion_rotation.h  typedef.h  vector_ortho.h
trunk/cml/matrix/: class_ops.h  dynamic.h  fixed.h  matrix_comparison.h  matrix_ops.h  matrix_promotions.h  matrix_rowcol.h
trunk/cml/matvec/: matvec_mul.h  matvec_promotions.h
trunk/cml/quaternion/: inverse.h  quaternion_comparison.h  quaternion_dot.h  quaternion_expr.h  quaternion_functions.h  quaternion_promotions.h
trunk/cml/vector/: class_ops.h  dynamic.h  external.h  vector_comparison.h  vector_expr.h  vector_functions.h  vector_print.h  vector_promotions.h  vector_traits.h  vector_unroller.h
