# -*- cmake -*- -----------------------------------------------------------
# @@COPYRIGHT@@
#*-------------------------------------------------------------------------
# @file
# @brief

PROJECT(ExpressionTemplateTests)
ADD_EXECUTABLE(promotion1 promotion1.cpp)

# --------------------------------------------------------------------------
# vim:ft=cmake
