# -*- cmake -*- -----------------------------------------------------------
# @@COPYRIGHT@@
#*-------------------------------------------------------------------------
# @file
# @brief

PROJECT(CRTP)

ADD_EXECUTABLE(crtp_oned crtp_oned.cpp)

# --------------------------------------------------------------------------
# vim:ft=cmake
