# -*- cmake -*- -----------------------------------------------------------
# @@COPYRIGHT@@
#*-------------------------------------------------------------------------
# @file
# @brief

PROJECT(CRTP)

ADD_EXECUTABLE(crtp_oned crtp_oned.cpp)
ADD_EXECUTABLE(crtp_vector crtp_vector.cpp)
ADD_EXECUTABLE(crtp_vecxpr crtp_vecxpr.cpp)

# --------------------------------------------------------------------------
# vim:ft=cmake
